syntax = "proto3";

// 依照 https://cloud.google.com/apis/design/naming_convention 規範
package softleader.captainkube.v2;

// Specifies Java package name, using the standard prefix "tw.com."
option java_package = "tw.com.softleader.captainkube.v2";
option go_package = "captainkube.v2";

import "chart.proto";
import "image.proto";
import "msg.proto";
import "version.proto";
import "prune.proto";

message SyncChartRequest {
    Chart chart = 1;
    int64 timeout = 2;
    ReTag retag = 3;
    RegistryAuth registry_auth = 4;
    bool verbose = 5;
    bool color = 6;
}

message InstallChartRequest {
    Chart chart = 1;
    Tiller tiller = 2;
    int64 timeout = 3;
    bool sync = 4;
    ReTag retag = 5;
    RegistryAuth registry_auth = 6;
    bool verbose = 7;
    bool color = 8;
}

message DeleteChartRequest {
    Tiller tiller = 1;
    string chart_name = 2;
    string chart_version = 3;
    int64 timeout = 4;
    bool verbose = 5;
}

message GenerateScriptRequest {
    Chart chart = 1;
    bool pull = 2;
    ReTag retag = 3;
    bool save = 4;
    bool load = 5;
    repeated string set = 6;
    bool verbose = 7;
}

service Captain {
    rpc SyncChart (SyncChartRequest) returns (stream ChunkMessage) {
    }
    rpc InstallChart (InstallChartRequest) returns (stream ChunkMessage) {
    }
    rpc DeleteChart (DeleteChartRequest) returns (stream ChunkMessage) {
    }
    rpc GenerateScript (GenerateScriptRequest) returns (stream ChunkMessage) {
    }
    rpc Prune (PruneRequest) returns (stream ChunkMessage) {
    }
    rpc Version (VersionRequest) returns (stream ChunkMessage) {
    }
}